# otaf

./: ..gitignore.swp  .buildinfo  .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  autotest.toml  genindex.html  index.html  kwds.txt  objects.inv  otaf_distributi.puml  otaf_distribution.puml  otaf_surrogate.puml  py-modindex.html  pydeps_command.py  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: deploy_docs.yml  pytest.yaml
_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_modules/: index.html
_modules/otaf/: common.html
_sources/: index.rst.txt
_sources/source/: README.rst.txt  otaf.common.rst.txt  otaf.distribution.rst.txt  otaf.example_models.models_2_D.model2.rst.txt  otaf.example_models.models_3_D.model4.rst.txt  otaf.example_models.models_3_D.rst.txt  otaf.geometry.rst.txt  otaf.optimization.rst.txt  otaf.rst.txt  otaf.surrogate.rst.txt  otaf.tolerances.rst.txt  otaf.uncertainty.rst.txt
_static/: custom.css
docs/: Makefile  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_static/: custom.css
docs/notebooks/: Analytical_2D_Reference_Assembly.html  Ex1_2D_4dof_Analytical_Ref.ipynb  Ex1_2D_4dof_Opti_Auto_Surrogate.ipynb
docs/source/: README.rst  modules.html  otaf.assembly_modeling.html  otaf.capabilities.html  otaf.capabilities.rst  otaf.common.html  otaf.constants.html  otaf.constants.rst  otaf.distribution.html  otaf.distribution.rst  otaf.example_models.html  otaf.example_models.models_2_D.model1.rst  otaf.example_models.models_2_D.model2.rst  otaf.example_models.models_2_D.rst  otaf.example_models.models_3_D.model3.rst  otaf.example_models.models_3_D.model4.rst  otaf.example_models.models_3_D.rst  otaf.example_models.rst  otaf.exceptions.html  otaf.exceptions.rst  otaf.geometry.html  otaf.html  otaf.optimization.html  otaf.plotting.html  otaf.plotting.rst  otaf.rst  otaf.sampling.html  otaf.sensitivity.html  otaf.sensitivity.rst  otaf.surrogate.html  otaf.uncertainty.html
logo/: logo.fdb_latexmk  logo.fls  logo.py  logo.tex
notebooks/: Analytical_2D_Reference_Assembly.html  Ex1_2D_4dof_Analytical_Ref.html  Ex1_2D_4dof_Opti_Auto_Surrogate.html  Ex1_2D_4dof_Opti_Auto_Surrogate.ipynb  Ex1_2D_4dof_Opti_Manual.html  Ex1_2D_4dof_Opti_Manual.ipynb  Untitled.ipynb
notebooks/AnalyticalModels/: AnalyseAnalytique_Modele1.5DIsoStat.ipynb  AnalyseAnalytique_Modele1.5DPropreScoreFunction.ipynb  AnalyseAnalytique_Modele2DTrousCarres.ipynb  Analytical_2D_Reference_Assembly_16DOF.ipynb  Analytical_2D_Reference_Assembly_4DOF.ipynb  Analytical_2D_Reference_Assembly_4DOF_EX1.ipynb  ExoEtatLimiteOptim.ipynb
notebooks/OptimizationBasedModels/: 2D_Model_16DOF_Auto_GLD.ipynb  2D_Model_16DOF_Auto_GLD_MLP_SURROGATE.ipynb  2D_Model_4DOF_Auto_GLD_EX1.ipynb  2D_Model_4DOF_Manual_Construction.ipynb  3D_Model_32DOF_Auto_GLD_EX2.ipynb  3D_Model_8DOF_Auto_GLD_DEBUG.ipynb  3D_Model_Cylinder_Test.ipynb  3D_Model_Cylinder_Test2.ipynb  AnalyseDenavit_Modele1.5D.ipynb  (+13 more)
scripts/: OptimizationResults_model1_4_dof.csv  OptimizationResults_model2_16_dof.csv  OptimizationResults_model3_30_dof.csv  OptimizationResults_model3_30_dof_reduced.csv  OptimizationResults_model4_50_dof.csv  Summary_model1_4_dof.md  Summary_model2_16_dof.md  Summary_model3_30_dof.md  Summary_model3_30_dof_reduced.md  Summary_model4_50_dof.md  Summary_model4_50_dof_reduced.md  analyze_results.py  imprecise_bouds_analysis.py  imprecise_bounds_analysis.py  model1_4_dof_surrogate.pth  model2_16_dof_surrogate.pth  model4_50_dof_surrogate.pth  optimize_tolerance_values_for_target_failure.py  plot_pf_2d_4dof_model.py  train_neural_network_surrogates.py  train_neural_networks.py
source/: README.html  modules.html  otaf.assembly_modeling.html  otaf.capabilities.html  otaf.common.html  otaf.constants.html  otaf.distribution.html  otaf.example_models.html  otaf.example_models.models_2_D.html  otaf.example_models.models_2_D.model1.html  otaf.example_models.models_2_D.model2.html  otaf.example_models.models_3_D.html  otaf.example_models.models_3_D.model3.html  otaf.example_models.models_3_D.model4.html  otaf.exceptions.html  otaf.geometry.html  otaf.html  otaf.optimization.html  otaf.plotting.html  otaf.sampling.html  otaf.sensitivity.html  otaf.surrogate.html  otaf.tolerances.html  otaf.uncertainty.html
src/: README.md  regex_expressions_sublime.re  setup.py
src/otaf/: .tags  (+6 more)
tests/: test_AssemblyDataProcessor.py  test_denavitTolerancingBasicObjects.py  test_general_model_creation.py  test_geometryFunctions.py  test_toleranceAnalysisMatrixPreparer.py  test_tolerance_zone_stat_constraints.py  test_tolerance_zones.py
(+336 files in other folders)
