[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otaf"
version = "0.1"
description = "OTAF : Open (mechanical) tolerance analysis framework - A comprehensive framework for modeling 3 dimensional overconstrained mechanical assemblies and doing statistical tolerance analysis."
readme = "README.md"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "Kristof Attila S.", email = "ksimady@sigma-clermont.fr"}
]
urls = { Homepage = "https://github.com/Kramer84/otaf", Documentation = "https://github.com/Kramer84/otaf/wiki" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
]

dependencies = [
    "numpy",
    "scipy",
    "sympy",
    "openturns",
    "matplotlib",
    "tqdm",
    "joblib",
    "torch",
    "torcheval",
    "scikit-learn",
    "trimesh",
    "beartype",
    "triangle",
    "pytransform3d[all]",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme",
    "furo",
    "myst-parser",
    "nbsphinx",
    "notebook",
    "pandoc"
]

[tool.setuptools.packages.find]
where = ["src"]
