[build-system]
requires = ["setuptools>=42", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "otaf"
version = "0.2"
description = "OTAF : Open (mechanical) tolerance analysis framework - A comprehensive framework for modeling 3 dimensional overconstrained mechanical assemblies and doing statistical tolerance analysis."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kristof Attila S.", email = "ksimady@sigma-clermont.fr"}
]
urls = { Homepage = "https://github.com/Kramer84/otaf", Documentation = "https://github.com/Kramer84/otaf/wiki" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
]

requires-python = ">= 3.8"

dependencies = [
    "numpy",
    "scipy>=1.14.0",
    "sympy",
    "pandas",
    "openturns",
    "matplotlib",
    "tqdm",
    "joblib",
    "beartype",
    "gldpy",
]

[project.optional-dependencies]
surrogate = [
    "torch",
    "torcheval",
    "scikit-learn"
]
viz = [
    "networkx",
    "trimesh",
    "triangle",
    "pytransform3d",
    "pyglet<2"
]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme",
    "myst-parser",
    "nbsphinx",
    "notebook",
    "pandoc"
]
# Let users install everything with: pip install otaf[all]
all = [
    "torch", "torcheval", "scikit-learn",
    "networkx", "trimesh", "triangle", "pytransform3d", 
    "pyglet<2", "sphinx", "sphinx-autodoc-typehints", 
    "sphinx_rtd_theme", "myst-parser", "nbsphinx", 
    "notebook", "pandoc"
]

[tool.setuptools.packages.find]
where = ["src"]
